--- a/frontend/ciptea/src/components/NavigationButtons/styles.css
+++ b/frontend/ciptea/src/components/NavigationButtons/styles.css
@@ -11,6 +11,7 @@
     justify-content: center;
     transition: .5s;
     cursor: pointer;
+    line-height: 20%;
   }
   
   .ArrowLeft:hover {  
@@ -18,6 +19,8 @@
     border: 1px solid #ddd;
     border-radius: 4px;
     box-shadow: 0px 3px;
+    line-height: 30%;
+
   }
   
   .LogOut {
