--- a/frontend/ciptea/src/pages/Card/styles.css
+++ b/frontend/ciptea/src/pages/Card/styles.css
@@ -30,13 +30,14 @@ ul.carteira li {
 }
 
 ul.carteira li header {
-    margin-left: 10%;
-    width: 80%;
-    height: 300px;
+    margin-left: 2%;
+    width: 300px;
+    height: 400px;
     background-size: cover;
     border-radius: 4px;
     box-shadow: 0 0 5px;
     background: no-repeat center;    
+    opacity: 1;
 }
 
 ul.carteira li strong {
@@ -93,7 +94,7 @@ tr:hover {
 }
 
 th {
-    background: #0B4C82;
+    background: #266396;
     color: #fafafa;
     text-transform: uppercase;
 }
@@ -134,3 +135,21 @@ nav.DropDownMenu:hover {
     background: #eeeeee;
 }
 
+.btnPrinter {
+    border: 0;
+    border-radius: 2px;
+    width: 100%;
+    height: 42px;
+    padding: 0 20px;
+    font-size: 16px;
+    font-weight: bold;
+    background: #fff;
+    color: #444;
+    cursor: pointer;
+    transition: .4s;
+    box-shadow: 0px 1px 2px;
+}
+.btnPrinter:hover {
+    background: #266396;
+    color: #fff;
+}
