--- a/frontend/src/components/MainHeader/styles.css
+++ b/frontend/src/components/MainHeader/styles.css
@@ -9,6 +9,7 @@
     top: 62%;  
 }
 */
+
 #MainHeader #MHContent {
     display: flex;
     flex-direction: column;
@@ -16,22 +17,53 @@
     align-items: center;
     grid-area: header;
     justify-items: center;
-} 
+}
 
 img#logo {
     width: auto;
     height: 150px;
-    
 }
 
-h1.title{
+h1.title {
     color: #fff;
     font-weight: bold;
     font-size: xx-large;
     opacity: 80%;
-  }
-  
-p.subtitle{
-    color: #fff;  
+}
+
+p.subtitle {
+    color: #fff;
     opacity: 80%;
+    width: 26em;
+    position: relative;
+    margin: 0 auto;
+    border-right: 2px solid rgba(255, 255, 255, 0.75);
+    font-size: 100%;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+/* Animation */
+.anim-typewriter {
+    animation: typewriter 5s steps(56) 3s 1 normal both,
+    blinkTextCursor 900ms steps(56) infinite normal;
+}
+
+@keyframes typewriter {
+    from {
+        width: 0;
+    }
+    to {
+        width: 25.8em;
+    }
+}
+
+@keyframes blinkTextCursor {
+    from {
+        border-right-color: rgba(255, 255, 255, 0.75);
+    }
+    to { 
+        border-right-color: transparent;
+    }
 }
