Melhor ajuste para o background

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,7 +14,8 @@ html, body, #root {
 
 body {
   background: #000 url('./assets/background.jpg') no-repeat;
-  background-size: cover;
+  background-attachment: fixed;
+  background-size: 100vw 100%;
   -webkit-font-smoothing: antialiased !important;
 }
 
