--- a/frontend/src/pages/Dashboard/styles.css
+++ b/frontend/src/pages/Dashboard/styles.css
@@ -1,21 +1,38 @@
 ul.lista-registros {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     width: 100%;
     list-style: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
     margin-bottom: 30px;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    row-gap: 20px;
 }
 
 ul.lista-registros li {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    height: 100%;
+    min-width: 200px;
+    width: 200px;
+    padding: 2px 4px 10px 4px;
+    border-color: #ededed;
+    border-radius: 7px;
+    transition: .7s;
+
+}
+ul.lista-registros li:hover {
+    border: 1px solid #dadada;
+    box-shadow: 0px 0px 10px;
 }
 
 ul.lista-registros li header {
     cursor: pointer;
-    width: 80%;
-    height: 200px;
+    height: 260px;
+    width: auto;
     background-size: cover;
     border-radius: 4px;
     box-shadow: 0 0 5px;
@@ -23,12 +40,14 @@ ul.lista-registros li header {
 }
 
 ul.lista-registros li strong {
+    align-self: center;
     margin-top: 10px;
     font-size: 24px;
     color: #444;
 }
 
 ul.lista-registros li span {
+    align-self: center;
     font-size: 15px;
     color: #999;
 }
