--- a/frontend/src/pages/CardPrinter/styles.css
+++ b/frontend/src/pages/CardPrinter/styles.css
@@ -7,17 +7,33 @@
         -ms-filter: none !important;
     }
     body {
-        margin: 0;
+        margin: 0em;
         padding: 0;
-        line-height: 1.4em;
     }
-    h1, span, nav, footer, video, audio, object, embed {
-        display: none;
+    h1, span, nav, footer, video, audio, object, embed, button, .MainHeader, .MainFooter, .NavigationButtons, #logo, p {
+        display: none !important;
+    }
+    .content {
+        border: none !important;
+        box-shadow: none !important;
+    }
+    card {
+        top: 0px !important;
+        left: 0px !important;
     }
 }
 
 .cardImg {
     width: 100%;
+}
+
+card {
+    font-family: sans-serif;
+    font-size: x-small;
+    text-align: center;
+    align-content: center;
+    flex-direction: column;
+    text-transform: capitalize !important;
 }
 
 card.carteiras {
