--- a/frontend/src/pages/New/styles.css
+++ b/frontend/src/pages/New/styles.css
@@ -2,10 +2,12 @@
     flex: 1;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    gap: 5px;
+
 }
 
 label#foto3x4, label#laudoMedico {
-    margin-left: 10px;
     margin-bottom: 20px;
     border: 2px dashed #ddd;
     background-attachment: scroll;
