Melhoria visual para experiência do usuário, apenas do bloco do segundo anexo.

--- a/frontend/src/pages/New/styles.css
+++ b/frontend/src/pages/New/styles.css
@@ -67,6 +67,10 @@ label#laudoMedico span {
     color: #999;
 }
 
+label#laudoMedico.has-laudoMedico {
+    background-color: #fff45728;
+}
+
 label#laudoMedico.has-laudoMedico span {
     display: none;
 }
