Foto sendo passada ao componente do cropper corretamente, restando retorno do item final

--- a/frontend/src/components/ImageCropper/styles.css
+++ b/frontend/src/components/ImageCropper/styles.css
@@ -1,10 +1,10 @@
-.imgcrp-container {
+.img-container {
     width: 354px;
     height: 472px;
     float: left;
 }
 
-.imgcrp-preview {
+.img-preview {
     width: 150px;
     height: 200px;
     float: left;
