--- a/src/Pages/Pages.Dashboard.fmx
+++ b/src/Pages/Pages.Dashboard.fmx
@@ -2,8 +2,8 @@ object PageDashboard: TPageDashboard
   Left = 0
   Top = 0
   Caption = 'Carteirinhas'
-  ClientHeight = 480
-  ClientWidth = 640
+  ClientHeight = 612
+  ClientWidth = 977
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
@@ -11,73 +11,67 @@ object PageDashboard: TPageDashboard
   DesignerMasterStyle = 0
   object lytDashboard: TLayout
     Align = Client
-    Size.Width = 640.000000000000000000
-    Size.Height = 480.000000000000000000
+    Size.Width = 977.000000000000000000
+    Size.Height = 612.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
     object Layout1: TLayout
       Align = Top
-      Size.Width = 640.000000000000000000
-      Size.Height = 50.000000000000000000
+      Size.Width = 977.000000000000000000
+      Size.Height = 25.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
       object Label1: TLabel
         Align = HorzCenter
-        Position.X = 285.000000000000000000
-        Size.Width = 69.000000000000000000
-        Size.Height = 50.000000000000000000
+        AutoSize = True
+        StyledSettings = [Style, FontColor]
+        Position.X = 388.000000000000000000
+        Size.Width = 201.000000000000000000
+        Size.Height = 25.000000000000000000
         Size.PlatformDefault = False
-        Text = 'Dashboard'
+        TextSettings.Font.Family = 'Fira Code Retina'
+        TextSettings.Font.Size = 14.000000000000000000
+        Text = 'Carteiras cadastradas'
         TabOrder = 0
       end
     end
-    object btnNew: TButton
-      Align = Bottom
-      Position.Y = 432.000000000000000000
-      Size.Width = 640.000000000000000000
-      Size.Height = 48.000000000000000000
-      Size.PlatformDefault = False
-      TabOrder = 1
-      Text = 'Nova Carteira'
-      OnClick = btnNewClick
-    end
-    object Grid1: TGrid
+    object vsbCarteiras: TVertScrollBox
       Align = Client
-      CanFocus = True
-      ClipChildren = True
-      Margins.Left = 20.000000000000000000
-      Margins.Top = 20.000000000000000000
-      Margins.Right = 20.000000000000000000
-      Margins.Bottom = 20.000000000000000000
-      Size.Width = 600.000000000000000000
-      Size.Height = 342.000000000000000000
+      Size.Width = 977.000000000000000000
+      Size.Height = 530.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 2
-      Viewport.Width = 580.000000000000000000
-      Viewport.Height = 301.000000000000000000
+      Viewport.Width = 977.000000000000000000
+      Viewport.Height = 530.000000000000000000
     end
-  end
-  object DataSource: TDataSource
-    DataSet = ServiceNew.mtPesquisaCarteiraPTEA
-    Left = 384
-    Top = 224
-  end
-  object BindSourceDB1: TBindSourceDB
-    DataSource = DataSource
-    ScopeMappings = <>
-    Left = 304
-    Top = 224
-  end
-  object BindingsList1: TBindingsList
-    Methods = <>
-    OutputConverters = <>
-    Left = 20
-    Top = 5
-    object LinkGridToDataSourceBindSourceDB1: TLinkGridToDataSource
-      Category = 'Quick Bindings'
-      DataSource = BindSourceDB1
-      GridControl = Grid1
-      Columns = <>
+    object retBtnNew: TRectangle
+      Align = Bottom
+      Fill.Color = claSteelblue
+      Margins.Left = 2.000000000000000000
+      Margins.Top = 5.000000000000000000
+      Margins.Right = 2.000000000000000000
+      Margins.Bottom = 2.000000000000000000
+      Position.X = 2.000000000000000000
+      Position.Y = 560.000000000000000000
+      Size.Width = 973.000000000000000000
+      Size.Height = 50.000000000000000000
+      Size.PlatformDefault = False
+      Stroke.Color = claLightsteelblue
+      XRadius = 5.000000000000000000
+      YRadius = 5.000000000000000000
+      object btnNew: TSpeedButton
+        Align = Bottom
+        StyledSettings = [Size]
+        Position.Y = 2.000000000000000000
+        Size.Width = 973.000000000000000000
+        Size.Height = 48.000000000000000000
+        Size.PlatformDefault = False
+        Text = 'Nova Carteira'
+        TextSettings.Font.Family = 'Fira Code Retina'
+        TextSettings.Font.StyleExt = {00070000000000000004000000}
+        TextSettings.FontColor = claAliceblue
+        OnClick = btnNewClick
+      end
     end
   end
 end
