--- a/src/Pages/Pages.New.fmx
+++ b/src/Pages/Pages.New.fmx
@@ -7,6 +7,8 @@ object PageNew: TPageNew
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   DesignerMasterStyle = 0
   object dlgLaudoMedico: TOpenDialog
     Left = 352
