--- a/src/Pages/Pages.New.fmx
+++ b/src/Pages/Pages.New.fmx
@@ -2,7 +2,7 @@ object PageNew: TPageNew
   Left = 0
   Top = 0
   Caption = 'Nova Carteirinha'
-  ClientHeight = 924
+  ClientHeight = 865
   ClientWidth = 800
   FormFactor.Width = 320
   FormFactor.Height = 480
@@ -17,7 +17,7 @@ object PageNew: TPageNew
   object lytNew: TLayout
     Align = Client
     Size.Width = 800.000000000000000000
-    Size.Height = 924.000000000000000000
+    Size.Height = 865.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 2
     object lytInterno: TLayout
@@ -27,18 +27,18 @@ object PageNew: TPageNew
       Padding.Right = 50.000000000000000000
       Padding.Bottom = 50.000000000000000000
       Size.Width = 800.000000000000000000
-      Size.Height = 862.000000000000000000
+      Size.Height = 778.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
       object VertScrollBox: TVertScrollBox
         Align = Client
         Size.Width = 700.000000000000000000
-        Size.Height = 792.000000000000000000
+        Size.Height = 708.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         ShowScrollBars = False
         Viewport.Width = 700.000000000000000000
-        Viewport.Height = 792.000000000000000000
+        Viewport.Height = 708.000000000000000000
         object edtCpfResponsavel: TEdit
           Touch.InteractiveGestures = [LongTap, DoubleTap]
           Align = Top
@@ -288,22 +288,12 @@ object PageNew: TPageNew
         end
       end
     end
-    object btnSalvar: TButton
-      Align = Bottom
-      Position.Y = 892.000000000000000000
-      Size.Width = 800.000000000000000000
-      Size.Height = 32.000000000000000000
-      Size.PlatformDefault = False
-      TabOrder = 9
-      Text = 'Salvar'
-      OnClick = btnSalvarClick
-    end
     object lytHeader: TLayout
       Align = MostTop
       Size.Width = 800.000000000000000000
       Size.Height = 30.000000000000000000
       Size.PlatformDefault = False
-      TabOrder = 10
+      TabOrder = 9
       object btnVoltar: TSpeedButton
         Align = MostLeft
         StyledSettings = [Size, FontColor]
@@ -322,6 +312,35 @@ object PageNew: TPageNew
       StartValue = 0.000000000000000000
       StartFromCurrent = True
       StopValue = -1.000000000000000000
+    end
+    object retBtnSalvar: TRectangle
+      Align = Bottom
+      Fill.Color = claSteelblue
+      Margins.Left = 2.000000000000000000
+      Margins.Top = 5.000000000000000000
+      Margins.Right = 2.000000000000000000
+      Margins.Bottom = 2.000000000000000000
+      Position.X = 2.000000000000000000
+      Position.Y = 813.000000000000000000
+      Size.Width = 796.000000000000000000
+      Size.Height = 50.000000000000000000
+      Size.PlatformDefault = False
+      Stroke.Color = claSkyblue
+      XRadius = 5.000000000000000000
+      YRadius = 5.000000000000000000
+      object btnSalvar: TSpeedButton
+        Align = Bottom
+        StyledSettings = [Size]
+        Position.Y = 2.000000000000000000
+        Size.Width = 796.000000000000000000
+        Size.Height = 48.000000000000000000
+        Size.PlatformDefault = False
+        Text = 'Salvar'
+        TextSettings.Font.Family = 'Fira Code Retina'
+        TextSettings.Font.StyleExt = {00070000000000000004000000}
+        TextSettings.FontColor = claAliceblue
+        OnClick = btnSalvarClick
+      end
     end
   end
   object dlgFotoRosto: TOpenDialog
