--- a/src/Pages/Pages.Update.fmx
+++ b/src/Pages/Pages.Update.fmx
@@ -10,6 +10,7 @@ object PageUpdate: TPageUpdate
   OnCreate = FormCreate
   DesignerMasterStyle = 0
   object dlgLaudoMedico: TOpenDialog
+    Filter = 'PDF|*.PDF'
     Left = 352
     Top = 660
   end
@@ -26,19 +27,19 @@ object PageUpdate: TPageUpdate
       Padding.Right = 50.000000000000000000
       Padding.Bottom = 50.000000000000000000
       Size.Width = 922.000000000000000000
-      Size.Height = 834.000000000000000000
+      Size.Height = 809.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
       OnClick = lytInternoClick
       object VertScrollBox: TVertScrollBox
         Align = Client
         Size.Width = 822.000000000000000000
-        Size.Height = 764.000000000000000000
+        Size.Height = 697.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         ShowScrollBars = False
         Viewport.Width = 822.000000000000000000
-        Viewport.Height = 764.000000000000000000
+        Viewport.Height = 697.000000000000000000
         object edtCpfResponsavel: TEdit
           Touch.InteractiveGestures = [LongTap, DoubleTap]
           Align = Top
@@ -280,7 +281,7 @@ object PageUpdate: TPageUpdate
               Size.Width = 200.000000000000000000
               Size.Height = 200.000000000000000000
               Size.PlatformDefault = False
-              OnClick = imgFotoRostoClick
+              OnClick = rctFotoRostoClick
               object lblSelecioneFOto: TLabel
                 Align = Center
                 AutoSize = True
@@ -302,26 +303,79 @@ object PageUpdate: TPageUpdate
             Size.PlatformDefault = False
             Stroke.Color = claGray
             OnClick = rctLaudoMedicoClick
+            object lblSelecioneLaudo: TLabel
+              Align = Horizontal
+              AutoSize = True
+              Position.Y = 88.000000000000000000
+              Size.Width = 200.000000000000000000
+              Size.Height = 16.000000000000000000
+              Size.PlatformDefault = False
+              TextSettings.HorzAlign = Center
+              Text = 'Selecione o laudo m'#233'dico em PDF'
+              TabOrder = 1
+            end
+            object LayoutZoom: TLayout
+              Align = Bottom
+              Position.Y = 152.000000000000000000
+              Size.Width = 200.000000000000000000
+              Size.Height = 48.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 2
+              object btnAmpliarDocumento: TSpeedButton
+                Align = Right
+                Position.X = 152.000000000000000000
+                Size.Width = 48.000000000000000000
+                Size.Height = 48.000000000000000000
+                Size.PlatformDefault = False
+                StyleLookup = 'passwordeditbutton'
+                OnClick = btnAmpliarDocumentoClick
+              end
+            end
           end
         end
       end
-    end
-    object btnSalvar: TButton
-      Align = Bottom
-      Position.Y = 864.000000000000000000
-      Size.Width = 922.000000000000000000
-      Size.Height = 32.000000000000000000
-      Size.PlatformDefault = False
-      TabOrder = 9
-      Text = 'Salvar'
-      OnClick = btnSalvarClick
+      object gtDocumentViewer: TgtDocumentViewer
+        Align = Bottom
+        Size.Width = 822.000000000000000000
+        Size.Height = 42.000000000000000000
+        Size.PlatformDefault = False
+        Position.X = 50.000000000000000000
+        Position.Y = 717.000000000000000000
+        TabOrder = 1
+        Display.PagedView.HorzPageSpacing = 4.000000000000000000
+        Display.PagedView.VertPageSpacing = 4.000000000000000000
+        Display.Zoom.IncrementPercent = 3333.333251953125000000
+        Display.Zoom.DecrementPercent = 1.666666626930237000
+        MouseMode = mmMarqueeZoom
+        Preferences.Interactivity.EnabledElements = []
+        Preferences.Fill.Kind = None
+        OperatingMode = omReading
+        object rctTopDocument: TRectangle
+          Align = Top
+          Fill.Color = claWhite
+          Size.Width = 822.000000000000000000
+          Size.Height = 42.000000000000000000
+          Size.PlatformDefault = False
+          Stroke.Kind = None
+          object btnFecharDocumento: TSpeedButton
+            Align = Right
+            Position.X = 760.000000000000000000
+            Size.Width = 62.000000000000000000
+            Size.Height = 42.000000000000000000
+            Size.PlatformDefault = False
+            StyleLookup = 'stoptoolbutton'
+            Text = 'Fechar'
+            OnClick = btnFecharDocumentoClick
+          end
+        end
+      end
     end
     object lytHeader: TLayout
       Align = MostTop
       Size.Width = 922.000000000000000000
       Size.Height = 30.000000000000000000
       Size.PlatformDefault = False
-      TabOrder = 10
+      TabOrder = 9
       object btnVoltar: TSpeedButton
         Align = MostLeft
         StyledSettings = [Size, FontColor]
@@ -352,6 +406,35 @@ object PageUpdate: TPageUpdate
       StartValue = 0.000000000000000000
       StartFromCurrent = True
       StopValue = -1.000000000000000000
+    end
+    object retBtnSalvar: TRectangle
+      Align = Bottom
+      Fill.Color = claSteelblue
+      Margins.Left = 2.000000000000000000
+      Margins.Top = 5.000000000000000000
+      Margins.Right = 2.000000000000000000
+      Margins.Bottom = 2.000000000000000000
+      Position.X = 2.000000000000000000
+      Position.Y = 844.000000000000000000
+      Size.Width = 918.000000000000000000
+      Size.Height = 50.000000000000000000
+      Size.PlatformDefault = False
+      Stroke.Color = claSkyblue
+      XRadius = 5.000000000000000000
+      YRadius = 5.000000000000000000
+      OnClick = retBtnSalvarClick
+      object SpeedButton1: TSpeedButton
+        Align = Bottom
+        StyledSettings = [Size]
+        Position.Y = 2.000000000000000000
+        Size.Width = 918.000000000000000000
+        Size.Height = 48.000000000000000000
+        Size.PlatformDefault = False
+        Text = 'Salvar'
+        TextSettings.Font.Family = 'Fira Code Retina'
+        TextSettings.Font.StyleExt = {00070000000000000004000000}
+        TextSettings.FontColor = claAliceblue
+      end
     end
   end
   object dlgFotoRosto: TOpenDialog
