--- a/src/Pages/Pages.Update.fmx
+++ b/src/Pages/Pages.Update.fmx
@@ -307,10 +307,10 @@ object PageUpdate: TPageUpdate
               AutoSize = True
               Position.Y = 88.000000000000000000
               Size.Width = 200.000000000000000000
-              Size.Height = 16.000000000000000000
+              Size.Height = 32.000000000000000000
               Size.PlatformDefault = False
               TextSettings.HorzAlign = Center
-              Text = 'Selecione o laudo m'#233'dico em PDF'
+              Text = 'Selecione o laudo m'#233'dico no formato PDF'
               TabOrder = 1
             end
             object LayoutZoom: TLayout
@@ -365,7 +365,6 @@ object PageUpdate: TPageUpdate
             Size.PlatformDefault = False
             StyleLookup = 'stoptoolbutton'
             Text = 'Fechar'
-            OnClick = btnFecharDocumentoClick
           end
         end
       end
@@ -409,7 +408,7 @@ object PageUpdate: TPageUpdate
     end
     object retBtnSalvar: TRectangle
       Align = Bottom
-      Fill.Color = claSteelblue
+      Fill.Color = xC84682B4
       Margins.Left = 2.000000000000000000
       Margins.Top = 5.000000000000000000
       Margins.Right = 2.000000000000000000
@@ -423,22 +422,44 @@ object PageUpdate: TPageUpdate
       XRadius = 5.000000000000000000
       YRadius = 5.000000000000000000
       OnClick = retBtnSalvarClick
-      object SpeedButton1: TSpeedButton
-        Align = Bottom
-        StyledSettings = [Size]
-        Position.Y = 2.000000000000000000
+      object ColorAnimation1: TColorAnimation
+        Duration = 0.200000002980232200
+        PropertyName = 'Fill.Color'
+        StartValue = xC84682B4
+        StopValue = claSteelblue
+        Trigger = 'IsMouseOver=true'
+        TriggerInverse = 'IsMouseOver=false'
+      end
+      object ShadowEffect1: TShadowEffect
+        Distance = 2.000000000000000000
+        Direction = 90.000000000000000000
+        Softness = 0.200000002980232200
+        Opacity = 0.600000023841857900
+        ShadowColor = claBlack
+      end
+      object lblSalvar: TLabel
+        Align = VertCenter
+        AutoSize = True
+        StyledSettings = []
+        Position.Y = 16.000000000000000000
         Size.Width = 918.000000000000000000
-        Size.Height = 48.000000000000000000
+        Size.Height = 18.000000000000000000
         Size.PlatformDefault = False
-        Text = 'Salvar'
         TextSettings.Font.Family = 'Fira Code Retina'
+        TextSettings.Font.Size = 14.000000000000000000
         TextSettings.Font.StyleExt = {00070000000000000004000000}
-        TextSettings.FontColor = claAliceblue
-        OnClick = retBtnSalvarClick
+        TextSettings.FontColor = claWhite
+        TextSettings.HorzAlign = Center
+        Text = 'Salvar'
+        TabOrder = 0
       end
     end
   end
   object dlgFotoRosto: TOpenDialog
+    Filter = 
+      'Formatos de imagem (*.BMP;*.JPG;*.GIF;*.PCX;*.PNG;*.PSD;*.RAS;*.' +
+      'SGI;*.TIFF)|*.BMP;*.JPG;*.GIF;*.PCX;*.PNG;*.PSD;*.RAS;*.SGI;*.TI' +
+      'FF;'
     Left = 136
     Top = 660
   end
